--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - name: Use NodeJS
-        uses: action/setup-node@v1 
+        uses: actions/setup-node@v1 
         with:
           node-version: "12.x"
       - run: npm ci
