--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   pull_request:
     branches: [develop]
+  push:
+    branches: [develop]
 
 jobs:
   build:
@@ -10,10 +12,20 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use NodeJS
-        uses: actions/setup-node@v1 
+        uses: actions/setup-node@v1
         with:
           node-version: "12.x"
       - run: npm ci
       - run: npm run format:check
-        env: 
+      - run: npm test -- --coverage
+        env:
           CI: true
+      - name: Build project
+        if: github.event_name == 'push'
+        run: npm run build
+      - name: Deploy to Staging
+        if: github.event_name == 'push' 
+        run: npx surge --project ./build --domain super-ship.surge.sh
+        env:
+          SURGE_LOGIN: ${{ secret.SURGE_LOGIN}}
+          SURGE_TOKEN: ${{ secret.SURGE_TOKEN}}
