--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Cache node_modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Use NodeJS
         uses: actions/setup-node@v1
         with:
@@ -20,11 +28,24 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
+      - name: Upload Test Coverage
+        if: github.event_name == 'push'
+        uses: actions/upload_artifact@v1
+        with:
+          name: code-coverage
+          path: coverage
+      - name: Upload Build Folder
+        if: github.event_name == 'push'
+        uses: actions/upload_artifact@v1
+        with:
+          name: build
+          path: build
+      - uses: actions/download_artifact
       - name: Build project
         if: github.event_name == 'push'
         run: npm run build
       - name: Deploy to Staging
-        if: github.event_name == 'push' 
+        if: github.event_name == 'push'
         run: npx surge --project ./build --domain super-ship.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN}}
