--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Cache node_modules
         uses: actions/cache@v1
-        with:
-          path: ~/.npm
+        with: 
+          path: ~/.npm  
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+              ${{ runner.os }}-node-
 
       - name: Use NodeJS
         uses: actions/setup-node@v1
@@ -45,8 +45,8 @@ jobs:
         if: github.event_name == 'push'
         run: npm run build
       - name: Deploy to Staging
-        if: github.event_name == 'push'
-        run: npx surge --project ./build --domain super-ship.surge.sh
+        if: github.event_name == 'push' 
+        run: npx surge --project ./build --domain boiling-salt.surge.sh
         env:
-          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN}}
-          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN}}
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
